langtools/test/tools/javac/proprietary/WarnWildcard.out
WarnWildcard.java:14:53: compiler.warn.sun.proprietary: sun.security.x509.X509CertImpl
- compiler.err.warnings.and.werror
1 error
1 warning
